fix: content overflow on css

--- a/public/styles.css
+++ b/public/styles.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    box-sizing: border-box;
 }
 
 body{
@@ -36,16 +37,18 @@ img{
     width: 30px;
 }
 
-.msg-box{
+.msg-box {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    overflow-y: scroll;
+    justify-content: flex-start; /* Asegura que el contenido empiece desde arriba */
+    align-items: stretch; /* Asegura que los elementos internos ocupen todo el ancho */
+    overflow-y: auto; /* Utiliza 'auto' en lugar de 'scroll' para ocultar el scrollbar si no es necesario */
     background-color: rebeccapurple;
     border-radius: 25px;
     max-height: 500px;
+    height: 100%; /* Asegura que el contenedor tome toda la altura posible */
     padding: 2rem;
+    box-sizing: border-box; /* Incluye padding y border en el cálculo del max-height */
 }
 
 .msg-box::-webkit-scrollbar{
